--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
     <div class="wrapper">
         <h2>Пропоную пройти невеличкий тест</h2>
         <h2>Повномаштабна війна</h2>
@@ -61,4 +70,3 @@
         <p id="answer" class = "hidden"><b>Правильна відповідь:</b> 2022</p>
     </div>
     <script src="js/js.js"></script>
-    <!DOCTYPE html>
