--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Російсько-українська війна. Бої за міста </h1> 
  
 <ul class="nav"> 
-  <li><a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D1%97_%D0%B7%D0%B0_%D0%A5%D0%B0%D1%80%D0%BA%D1%96%D0%B2_(2022)/">Харків</a></li> 
+  <li><a href="https://ulyana09864.github.io/timetable/">Харків</a></li> 
   <li><a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D1%97_%D0%B7%D0%B0_%D0%9A%D0%B8%D1%97%D0%B2_(2022)">Київ</a></li> 
   <li><a href="https://uk.wikipedia.org/wiki/%D0%93%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0_%D1%81%D1%82%D0%BE%D1%80%D1%96%D0%BD%D0%BA%D0%B0">Запоріжжя</a></li>     
   <li><a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D1%97_%D0%B7%D0%B0_%D0%A5%D0%B5%D1%80%D1%81%D0%BE%D0%BD">Херсон</a></li> 
