--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
  
 <ul class="nav"> 
   <li><a href="https://ulyana09864.github.io/questionss/">Легкий тест</a></li> 
-  <li><a href="https://ulyana09864.github.io/mas/">Тест з історії</a></li> 
-  <li><a href="https://uk.wikipedia.org/wiki/%D0%93%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0_%D1%81%D1%82%D0%BE%D1%80%D1%96%D0%BD%D0%BA%D0%B0">Запоріжжя</a></li>     
-  <li><a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D1%97_%D0%B7%D0%B0_%D0%A5%D0%B5%D1%80%D1%81%D0%BE%D0%BD">Херсон</a></li> 
+  <li><a href="https://ulyana09864.github.io/tests1/">Тест з історії</a></li> 
+  <li><a href="https://ulyana09864.github.io/calculatorr/">Калькулятор</a></li>     
+  <li><a href="https://ulyana09864.github.io/inlineblock/">Новина</a></li> 
             
 </ul> 
-Російське вторгнення в Україну 2022 року — відкритий воєнний напад Росії на Україну, початий о 3:40 24 лютого 2022 року. Частина російсько-української війни, розв'язаної Росією 2014 року, участь у якій РФ намагалася заперечувати. Генеральна Асамблея ООН у своїй резолюції від 2 березня 2022 року засудила дії Росії та назвала їх агресією проти України. Міжнародний суд ООН в Гаазі 16 березня 2022 року зобов'язав Росію припинити розпочаті 24 лютого 2022 року воєнні дії в Україні.</h1> 
+
 <p><div class="logo"><img src="https://static.ukrinform.com/photos/2022_09/thumb_files/630_360_1664044452-259.jpeg" alt="Фото"></div> 
  
