--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 <style> 
 .nav { 
-    background-color: blue;  
+    background-color: pink;  
     padding: 15px; 
     list-style-type: none; 
     text-align: center; 
