--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     background-color: pink;  
     padding: 15px; 
     list-style-type: none; 
-    text-align: stretch; 
+    text-align: center; 
+    justify-content: space-between;
 } 
  
 .nav li { 
