--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <style> 
 .nav { 
     background-color: pink;  
-    padding: 20 px; 
+    padding: 15 px; 
     list-style-type: none; 
     text-align: center; 
-    justify-content: space-between;
+   
 } 
  
 .nav li { 
-    display: inline-block; 
+    display: flex; 
+    justify-content:space-between;
     font-size: 20px; 
     padding-left: 20px; 
     padding-right: 20px;  
