--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 } 
  
 .nav li { 
-    display: flex; 
+    display: inline-block; 
     justify-content:space-between;
     font-size: 20px; 
     padding-left: 20px; 
