--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
             
 </ul> 
 
-<p><div class="logo"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FSuvitruf%2Fstatus%2F1579018366974844932&psig=AOvVaw1EB2KaGVGkhPD8Swh5Nn8J&ust=1670844191132000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCKiXoeW58fsCFQAAAAAdAAAAABAE" alt="Фото"></div> 
+<p><div class="logo"><img src="https://pbs.twimg.com/media/FenMzm9X0AQFh8e.jpg" alt="Фото"></div> 
  
