--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
             
 </ul> 
 
-<p><div class="logo"><img src="https://pbs.twimg.com/media/FenMzm9X0AQFh8e.jpg" alt="Фото"></div> 
+<p><div class="logo"><img src="https://i.ibb.co/fNt01hB/Fen-Mzm9-X0-AQFh8e.jpg" alt="Фото"></div> 
  
