--- a/index.html
+++ b/index.html
@@ -31,4 +31,5 @@
 </ul> 
 
 <p><div class="logo"><img src="https://i.ibb.co/fNt01hB/Fen-Mzm9-X0-AQFh8e.jpg" alt="Фото"></div> 
- 
+<p><div class="logo"><img src="https://i.ibb.co/fNt01hB/Fen-Mzm9-X0-AQFh8e.jpg" alt="Фото"></div> 
+<p><div class="logo"><img src="https://i.ibb.co/fNt01hB/Fen-Mzm9-X0-AQFh8e.jpg" alt="Фото"></div> 
