--- a/index.html
+++ b/index.html
@@ -30,4 +30,4 @@
             
 </ul> 
 
-<p><div class="logo"><img src="<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYn6pRbq_jmNj3LioSTnnm6nx6uqW3gys8XA&usqp=CAU" alt="Фото"></div>  
+<p><div class="logo"><img src="<a href="https://i.ibb.co/TW5TQKn/images.jpg" alt="Фото"></div>  
