--- a/index.html
+++ b/index.html
@@ -30,4 +30,4 @@
             
 </ul> 
 
-<p><div class="logo"><img src="<a href="https://i.ibb.co/TW5TQKn/images.jpg" alt="Фото"></div>  
+<p><img src="https://i.ibb.co/TW5TQKn/images.jpg">
